# PosSchnuffi

./: .gitignore  Pipfile  build.py  pyproject.toml  schnuffi.py  schnuffi.spec
locale/: translate.py
locale/de/LC_MESSAGES/: PosSchnuffi.po
locale/en/LC_MESSAGES/: PosSchnuffi.mo  PosSchnuffi.po
modules/: __init__.py  context_menu.py  filter_tree_widget.py  item_add_undo.py  item_edit_undo.py  knecht_xml.py  main_app.py  pos_schnuffi_compare.py  pos_schnuffi_export.py  pos_schnuffi_msg.py  pos_schnuffi_ui.py  pos_schnuffi_xml_diff.py  widgets.py
modules/utils/: animation.py  globals.py  gui_utils.py  language.py  log.py  path_util.py  settings.py  ui_loader.py  ui_overlay.py  ui_resource.py
ui/: POS_Schnuffi.ui  POS_Schnuffi_File_Dialog.ui  create_gui_resource.py  pos_schnuffi_res.py  schnuffi_res_paths.json
