[tool.poetry]
name = "pos-schnuffi"
version = "1.1.0"
description = ""
authors = ["tappi287 <tapper.stefan@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include="modules"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "^6.6.2"
QtPy = "^2.4.1"
ujson = "^5.9.0"
jsonpickle = "^3.0.3"
lxml = "^5.1.0"
pywin32-ctypes = "^0.2.2"
altgraph = "^0.17.4"
pefile = "^2023.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
